# qemu-quasihosting-tricore

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cpu0_Main.c  Lcf_Gnuc_Tricore_Tc.lsl  README.md  rwonce.h  testboard.lsl
.github/workflows/: cmake.yml
Tests/: Lcf_Gnuc_Tricore_Tc.lsl  a_test.c  assert_false.c  assert_true.c  core.h  csa_test.c  cxi.h  exit_test.c  ssw.c  ssw.h  ssw_tc0.c  stdlib.c  tricore_testdevice.h
cmake/: tricore-elf-gcc.cmake  tricore-quasihosting.cmake
cmake/ConfigurationsAndLibraries/: CMakeLists.txt
cmake/Libraries/: CMakeLists.txt
